# dark-cloud-encyclopedia-mono

./: .gitignore  3rdpartylicenses.txt  404.html  Dark-Cloud-WeaponDatabase.numbers  README.md  Taskfile.yml  index.html  main.19f7a04d1bdc47c0bb96.js  main.3b13c84642c263665755.js  main.43686d55f3c964eadfe2.js  main.445c5ab090595a4806b8.js  main.6069d369ae08515afcf5.js  main.81012d047cb0ad2ff01e.js  main.915b921c722bd0edb652.js  main.a8768e8158b12016e54c.js  main.cd780b450c87503390b3.js  main.dc24f614a7e2fedb7e59.js  main.e905757bd09ef9578118.js  main.f61be82e56743e754091.js  polyfills.55de4a2dc258fffdab88.js  pyproject.toml  styles.7e020bc660a4f8ccdcc0.css  todo.md
assets/: weapon-graphs.json
categorize-images/: .DockerIgnore  .gitignore  LICENSE  Makefile  README.md  README.rst  app.py  check_missing.py  generate_tree.py  main.py  migrate_images.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup  setup.py
categorize-images/archived/: all_weapons.json  requirements.txt  serverless.yml  setup.sh
categorize-images/categorize/: ArchivePair.py  FileOs.py  __init__.py  get_basename.py  get_matching_s3_objects.py  image_text_decider.py  is_weapon_stat_screen.py  output.txt  read_file_s3.py  read_image_text.py  rekognize.py  upload_images_to_s3.py
categorize-images/data/: all_weapons.json
categorize-images/tests/: context.py  test_FileOs.py  test_ensure_all_folders_get_weapon_names.py  test_handler.py  test_image_text_decider2.py  test_is_weapon_stat_screen.py  test_move_to_weapon_folder.py  test_read_file_s3.py  test_set_image_name.py
(+167 files in other folders)
